--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~54.0.12",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
+    "expo-image-picker": "~16.0.6",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.10",
     "expo-splash-screen": "~31.0.10",
